include birdie updates from this morning

--- a/header/gg_header_online.html
+++ b/header/gg_header_online.html
@@ -13,7 +13,7 @@
 	<div id="wrapper">
 		<div id="myslidemenu" class="jqueryslidemenu">
 			<ul>
-				<li><a href="#">My Team</a>
+				<li><a href="#">Owner's Box</a>
   					<ul>
   						<li><a href="#">Franchise Setup</a>
 	  						<ul> 
@@ -26,24 +26,26 @@
 						<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=118">Scoring History</a></li>
 						<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=171">Series Records</a></li>
 	  					<li><a href="http://football26.myfantasyleague.com/2012/fantasy_box_score?L=36828">Box Score</a></li>
-	  					<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=202">My Trophey Room</a></li>
+	  					<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=202">My Trophy Room</a></li>
+	  					<li><a href="http://football26.myfantasyleague.com/2012/accounting_report?L=36828&TYPE=GRID">League Fees Summary</a></li>
 	  				</ul>
 				</li> <!-- close my team -->
-				<li><a href="#">Team Management</a>
+				<li><a href="#">GM's Office</a>
 					<ul>
 						<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=02">Submit Line-up</a></li>
 						<li><a href="#">Player Management</a>
 							<ul>
+	  							<li><a href="http://football26.myfantasyleague.com/2012/player_search?L=36828">Player Search</a></li>
 	  							<li><a href="#">Add Player</a></li>
 						  		<li><a href="http://football26.myfantasyleague.com/2012/options?O=74&L=36828">Drop Player</a></li>
 					  			<li><a href="http://football26.myfantasyleague.com/2012/options?O=18&L=36828">IR Player</a></li>
-					  			<li><a href="http://football26.myfantasyleague.com/2012/options?O=178&L=36828">My Watch List</a></li>
+					  			<li><a href="http://football26.myfantasyleague.com/2012/options?O=178&L=36828">FA Scounting List</a></li>
 							</ul>
 						</li> <!-- close player management -->
 						<li><a href="#">Free Agents</a>
 							<ul>
-								<li><a href="http://football26.myfantasyleague.com/2012/free_agents?L=36828">Full Free Agent List</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?O=08&CATEGORY=freeagent&L=36828">Available Free Agents</a></li>
+								<li><a href="http://football26.myfantasyleague.com/2012/free_agents?L=36828">Full Free Agent List</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=117">Top Adds/Drops</a></li>
 							</ul>
 						</li> <!-- close free agents -->
@@ -55,21 +57,18 @@
 						</li> <!-- close trades -->
 						<li><a href="#">Transactions</a>
 							<ul>
-								<li><a href="http://football26.myfantasyleague.com/2012/processed_waivers?L=36828">Previously Processed Waivers</a></li>
+								<li><a href="http://football26.myfantasyleague.com/2012/processed_waivers?L=36828">Waiver History</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=03">Latest Transactions</a></li>
 								<li><a href="#">Waiver Order</a></li>
 							</ul>
 						</li> <!-- close transactions -->
 					</ul>
-				</li> <!-- close team management -->
+				</li> <!-- close GM's Office -->
 				<li><a href="#">Newsroom</a>
 					<ul>
-						<li><a href="http://football26.myfantasyleague.com/2012/player_search?L=36828">Player Search</a></li>
 						<li><a href="http://football26.myfantasyleague.com/2012/news_articles?MYNEWS=1&L=36828">My Player News</a></li>
 						<li><a href="http://football26.myfantasyleague.com/2012/news_articles?L=36828&PLAYERS=&SOURCE=*&TEAM=*&POSITION=*&DAYS=7">League Player News</a></li>
-						<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=205">Who Should Start</a></li>
 						<li><a href="#">Twitter News</a></li>
-						<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=81">NFL Team Player Average</a></li>
 						<li><a href="#">NFL News</a>
 							<ul>
 								<li><a href="#">ESPN</a>
@@ -98,12 +97,20 @@
 					<ul>
 						<li><a href="#">Live Scoring</a>
 							<ul>
-								<li><a href="http://www26.myfantasyleague.com/2012/live_scoring?L=36828">Scoring Details</a></li>
 								<li><a href="http://www26.myfantasyleague.com/2012/live_scoring_summary?L=36828">Scoring Summary</a></li>
+								<li><a href="http://www26.myfantasyleague.com/2012/live_scoring?L=36828">Scoring Details</a></li>
 								<li><a href="#">Scoreboard</a></li>
 							</ul>
 						</li> <!-- close live scoring -->
-						<li><a href="#">Starting Lineups</a></li>
+						<li><a href="#">Research</a>
+							<ul>
+								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=06">Starting Lineups</a></li>
+								<li><a href="http://football8.myfantasyleague.com/2012/injury?L=36828">Injury Report</a></li>
+								<li><a href="http://football26.myfantasyleague.com/2012/depth_chart?L=36828">Fantasy Depth Chart</a></li>
+								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=205">Who Should Start</a></li>
+								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=81">NFL Team Player Average</a></li>
+							</ul>
+						</li> <!-- close Research -->
 						<li><a href="#">Game Review</a>
 							<ul>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=169">Projected Scores</a></li>
@@ -146,9 +153,8 @@
 						<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=37">Starter Points of Players</a></li>
 					</ul>
 				</li> <!-- close leaderboard -->
-				<li><a href="#">League</a>
+				<li><a href="#">GGL Headquarters</a>
 					<ul>
-						<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=01">Owners</a></li>
 						<li><a href="#">Rules</a>
 							<ul>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=09">League Scoring</a></li>
@@ -156,8 +162,24 @@
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=112">History</a></li>
 							</ul>
 						</li> <!-- close rules -->
-						<li><a href="#">Commish Corners</a></li>
-						<li><a href="#">Communitications</a>
+						<li><a href="#">Commish's Corner</a>
+						<ul>
+								<li><a href="#">Commish's News</a></li>
+								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=01">League Owners</a></li>
+								<li><a href="http://football8.myfantasyleague.com/2012/options?L=36828&O=123">League Calendar</a></li>
+								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=73">League Articles</a></li>
+								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=69">Polls</a></li>
+								<li><a href="http://www26.myfantasyleague.com/2012/chat?L=36828&COUNT=40">Chat</a></li>
+							</ul>
+						</li> <!-- close Commish's Corner -->
+						<li><a href="#">League Games</a>
+							<ul>
+								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=121">NFL Pool Picks</a></li>
+								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=120">Survivor Picks</a></li>
+								<li><a href="#">Fantasy Pick'em Pool</a></li>
+							</ul>
+						</li> <!-- close league games -->
+						<li><a href="#">Communications</a>
 							<ul>
 								<li><a href="http://www.facebook.com/groups/132034036837770/">Facebook Group</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/mb/board_show.pl?bid=201136828">Message Board</a></li>
@@ -168,21 +190,25 @@
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=13">Bullentin Board</a></li>
 							</ul>
 						</li> <!-- close communications -->
-						<li><a href="#">League Games</a>
+						<li><a href="#">Commissioner Tools</a>
 							<ul>
-								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=121">NFL Pool Picks</a></li>
-								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=120">Survivor Picks</a></li>
-								<li><a href="#">Fantasy Pick'em Pool</a></li>
+								<li><a href="http://football26.myfantasyleague.com/2012/menu_page?L=36828&NAME=FORCOMMISSIONERS">Settings</a></li>
+								<li><a href="http://football8.myfantasyleague.com/2012/support?L=36828">Help Center</a></li>
+								<li><a href="http://football8.myfantasyleague.com/2012/my_tickets?L=36828">Support Tickets</a></li>
+								<li><a href="http://football8.myfantasyleague.com/2012/site_news?L=36828">Site Updates</a></li>
+								<li><a href="http://football8.myfantasyleague.com/2012/options?L=36828&O=49">Owner Fees Edit</a></li>
+								<li><a href="http://football8.myfantasyleague.com/2012/options?L=36828&O=218">Text Owners</a></li>
 							</ul>
-						</li> <!-- close league games -->
+						</li> <!-- close Commissioner Tools -->
 					</ul>
-				</li> <!-- close league -->
+				</li> <!-- close GGL Headquarters -->
 				<li><a href="#">Playoffs</a></li>
 				<li><a href="#">Draft</a>
 					<ul>
-						<li><a href="#">Live Draft Room</a></li>
-						<li><a href="#">Set Draft Order</a></li>
-						<li><a href="#">Future Draft Picks</a></li>
+						<li><a href="http://www8.myfantasyleague.com/2012/ajax_ld?L=36828">Live Draft Room</a></li>
+						<li><a href="http://football26.myfantasyleague.com/2012/options?LEAGUE_ID=36828&O=129">My Draft List</a></li>
+						<li><a href="http://football26.myfantasyleague.com/2012/options?LEAGUE_ID=36828&O=151">My Draft Preferences</a></li>						
+						<li><a href="http://www2.myfantasyleague.com/mockdrafts/public.php">Join a Mock Draft</a></li>
 					</ul>
 				</li> <!-- close draft -->
 				<li><a href="#">History</a>
