added fantasy pool link

--- a/header/gg_header_online.html
+++ b/header/gg_header_online.html
@@ -177,7 +177,7 @@
 							<ul>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=121">NFL Pool Picks</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=120">Survivor Picks</a></li>
-								<li><a href="#">Fantasy Pick'em Pool</a></li>
+								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=179">Fantasy Pick'em Pool</a></li>
 							</ul>
 						</li> <!-- close league games -->
 						<li><a href="#">Communications</a>
