--- a/header/gg_header_online.html
+++ b/header/gg_header_online.html
@@ -109,6 +109,9 @@
 								<li><a href="http://football8.myfantasyleague.com/2012/injury?L=36828">Injury Report</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/depth_chart?L=36828">Fantasy Depth Chart</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=205">Who Should Start</a></li>
+								<li><a href="http://football26.myfantasyleague.com/2012/pro_schedule?L=36828">2012 NFL Schedule</a></li>
+								<li><a href="http://football29.myfantasyleague.com/2012/pro_matchup?L=36828">NFL Weekly Match-up</a></li>
+								<li><a href="http://football29.myfantasyleague.com/2012/nfl_team_stats?L=36828">NFL Team Stats</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=81">NFL Team Player Average</a></li>
 							</ul>
 						</li> <!-- close Research -->
@@ -122,7 +125,6 @@
 						</li> <!-- close game review -->
 						<li><a href="#">Schedule</a>
 							<ul>
-								<li><a href="#">Full Schedule</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=15">By Week</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=16">By Franchise</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=54">Compact</a></li>
@@ -138,7 +140,7 @@
 						<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=20">Bar Chart</a></li>
 						<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=119">Tiebreakers</a></li>
 						<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=153">Victory Points Summary</a></li>
-						<li><a href="#">Top Performers</a>
+						<li><a href="http://football29.myfantasyleague.com/2012/options?L=36828&O=08">Top Performers</a>
 							<ul>
 								<li><a href="http://football26.myfantasyleague.com/2012/top?L=36828&SEARCHTYPE=ADVANCED&COUNT=30&CATEGORY=overall&POSITION=QB&DISPLAY=Passers&TEAM=*&SORT=TOT">Top Passers</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/top?L=36828&SEARCHTYPE=ADVANCED&COUNT=30&CATEGORY=overall&POSITION=RB&DISPLAY=Rushers&TEAM=*&SORT=TOT">Top Running Backs</a></li>
@@ -216,6 +218,22 @@
 					<ul>
 						<li><a href="#">Champions</a></li>
 						<li><a href="#">Hall of Fame</a></li>
+						<li><a href="#">Seasons</a>
+							<ul>
+								<li><a href="http://football26.myfantasyleague.com/2011/home/54561">2011</a></li>
+							</ul>
+						</li> <!-- close Seasons -->						
+						<li><a href="#">Records</a>
+							<ul>
+								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=156">Franchise Records</a></li>
+								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=157">Player Records</a></li>
+								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=158">Matchup Records</a></li>
+								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=171">All-Time Series</a></li>
+								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=204">Season Records</a></li>
+								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=208">Career Records</a></li>
+								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=232">Record Streaks</a></li>
+							</ul>
+						</li> <!-- close Records -->
 					</ul>
 				</li>
 			</ul>
