links added, a lot cleaner now, no broken links

--- a/header/gg_header_online.html
+++ b/header/gg_header_online.html
@@ -14,12 +14,13 @@
 	<div id="wrapper">
 		<div id="myslidemenu" class="jqueryslidemenu">
 			<ul>
-				<li><a href="#">Owner's Box</a>
+				<li><a href="http://www26.myfantasyleague.com/2012/home/36828#">Owner's Box</a>
   					<ul>
   						<li><a href="#">Franchise Setup</a>
 	  						<ul> 
 					  			<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=50">Owner Setup</a></li>
 							  	<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=70">Change Password</a></li>
+							  	<li><a href="http://football8.myfantasyleague.com/2012/options?L=36828&O=01">League Franchises</a></li>
 						  	</ul>
 	  					</li> <!-- close franchise setup -->
 			  			<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=07">Roster</a></li>
@@ -37,7 +38,7 @@
 						<li><a href="#">Player Management</a>
 							<ul>
 	  							<li><a href="http://football26.myfantasyleague.com/2012/player_search?L=36828">Player Search</a></li>
-	  							<li><a href="#">Add Player</a></li>
+	  							<li><a href="http://football26.myfantasyleague.com/2012/options?LEAGUE_ID=36828&O=46">Add Player</a></li>
 						  		<li><a href="http://football26.myfantasyleague.com/2012/options?O=74&L=36828">Drop Player</a></li>
 					  			<li><a href="http://football26.myfantasyleague.com/2012/options?O=18&L=36828">IR Player</a></li>
 					  			<li><a href="http://football26.myfantasyleague.com/2012/options?O=178&L=36828">FA Scounting List</a></li>
@@ -60,7 +61,7 @@
 							<ul>
 								<li><a href="http://football26.myfantasyleague.com/2012/processed_waivers?L=36828">Waiver History</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=03">Latest Transactions</a></li>
-								<li><a href="#">Waiver Order</a></li>
+								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=119&TYPE=WAIVERS">Waiver Order</a></li>
 							</ul>
 						</li> <!-- close transactions -->
 					</ul>
@@ -69,7 +70,6 @@
 					<ul>
 						<li><a href="http://football26.myfantasyleague.com/2012/news_articles?MYNEWS=1&L=36828">My Player News</a></li>
 						<li><a href="http://football26.myfantasyleague.com/2012/news_articles?L=36828&PLAYERS=&SOURCE=*&TEAM=*&POSITION=*&DAYS=7">League Player News</a></li>
-						<li><a href="#">Twitter News</a></li>
 						<li><a href="#">NFL News</a>
 							<ul>
 								<li><a href="#">ESPN</a>
@@ -90,6 +90,10 @@
 										<li><a rel="external" target="_new" href="http://www.cbssports.com/nfl/injuries">Player Injuries</a></li>
 									</ul> 
 								</li> <!-- close cbs sports -->
+								<li><a href="http://www.usatoday.com/sports/football/index">USA Today</a>
+								<li><a href="http://msn.foxsports.com/nfl">FOX Sports</a>
+								<li><a href="http://sportsillustrated.cnn.com/football/nfl/">SI Sports</a>
+								<li><a href="http://www.cbssports.com/nfl/">CBS Sports</a>									
 							</ul>
 						</li> <!-- close nfl news -->
 					</ul>
@@ -100,7 +104,8 @@
 							<ul>
 								<li><a href="http://www26.myfantasyleague.com/2012/live_scoring_summary?L=36828">Scoring Summary</a></li>
 								<li><a href="http://www26.myfantasyleague.com/2012/live_scoring?L=36828">Scoring Details</a></li>
-								<li><a href="#">Scoreboard</a></li>
+								<li><a href="http://football8.myfantasyleague.com/2012/fantasy_box_score?L=36828">Box Score</a></li>
+								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=118">Scoring History</a></li>								
 							</ul>
 						</li> <!-- close live scoring -->
 						<li><a href="#">Research</a>
@@ -167,7 +172,7 @@
 						</li> <!-- close rules -->
 						<li><a href="#">Commish's Corner</a>
 						<ul>
-								<li><a href="#">Commish's News</a></li>
+								<li><a href="https://www.facebook.com/groups/398643846860175/">Commish's News</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=01">League Owners</a></li>
 								<li><a href="http://football8.myfantasyleague.com/2012/options?L=36828&O=123">League Calendar</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=73">League Articles</a></li>
@@ -201,30 +206,31 @@
 								<li><a href="http://football8.myfantasyleague.com/2012/site_news?L=36828">Site Updates</a></li>
 								<li><a href="http://football8.myfantasyleague.com/2012/options?L=36828&O=49">Owner Fees Edit</a></li>
 								<li><a href="http://football8.myfantasyleague.com/2012/options?L=36828&O=218">Text Owners</a></li>
+								<li><a href="http://football8.myfantasyleague.com/2012/site_news?CATEGORY=Official+Statistics+Changes&L=36828">Stat Reports</a></li>
 							</ul>
-						</li> <!-- close Commissioner Tools -->
+				</li> <!-- close Commissioner Tools -->
 					</ul>
 				</li> <!-- close GGL Headquarters -->
 				<li><a href="#">Playoffs</a></li>
 				<li><a href="#">Draft</a>
 					<ul>
-						<li><a href="http://www8.myfantasyleague.com/2012/ajax_ld?L=36828">Live Draft Room</a></li>
-						<li><a href="http://football26.myfantasyleague.com/2012/options?LEAGUE_ID=36828&O=129">My Draft List</a></li>
-						<li><a href="http://football26.myfantasyleague.com/2012/options?LEAGUE_ID=36828&O=151">My Draft Preferences</a></li>						
-						<li><a href="http://www2.myfantasyleague.com/mockdrafts/public.php">Join a Mock Draft</a></li>
-					</ul>
+						        <li><a href="http://www8.myfantasyleague.com/2012/ajax_ld?L=36828">Live Draft Room</a></li>
+						        <li><a href="http://football26.myfantasyleague.com/2012/options?LEAGUE_ID=36828&O=129">My Draft List</a></li>
+						        <li><a href="http://football26.myfantasyleague.com/2012/options?LEAGUE_ID=36828&O=151">My Draft Preferences</a></li>						
+						        <li><a href="http://www2.myfantasyleague.com/mockdrafts/public.php">Join a Mock Draft</a></li>
+				    </ul>
 				</li> <!-- close draft -->
 				<li><a href="#">History</a>
 					<ul>
-						<li><a href="#">Champions</a></li>
-						<li><a href="#">Hall of Fame</a></li>
-						<li><a href="#">Seasons</a>
-							<ul>
-								<li><a href="http://football26.myfantasyleague.com/2011/home/54561">2011</a></li>
-							</ul>
-						</li> <!-- close Seasons -->						
+						         <li><a href="#">Champions</a></li>
+						         <li><a href="#">Hall of Fame</a></li>
+						         <li><a href="#">Seasons</a>
+					<ul>
+						         <li><a href="http://football26.myfantasyleague.com/2011/home/54561">2011</a></li>
+					</ul>
+				</li> <!-- close Seasons -->						
 						<li><a href="#">Records</a>
-							<ul>
+					<ul>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=156">Franchise Records</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=157">Player Records</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=158">Matchup Records</a></li>
@@ -232,8 +238,8 @@
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=204">Season Records</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=208">Career Records</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=232">Record Streaks</a></li>
-							</ul>
-						</li> <!-- close Records -->
+					</ul>
+				</li> <!-- close Records -->
 					</ul>
 				</li>
 			</ul>
