added the 2010 season link to history menu iteam

--- a/header/gg_header_online.html
+++ b/header/gg_header_online.html
@@ -214,23 +214,24 @@
 				<li><a href="#">Playoffs</a></li>
 				<li><a href="#">Draft</a>
 					<ul>
-						        <li><a href="http://www8.myfantasyleague.com/2012/ajax_ld?L=36828">Live Draft Room</a></li>
-						        <li><a href="http://football26.myfantasyleague.com/2012/options?LEAGUE_ID=36828&O=129">My Draft List</a></li>
-						        <li><a href="http://football26.myfantasyleague.com/2012/options?LEAGUE_ID=36828&O=151">My Draft Preferences</a></li>						
-						        <li><a href="http://www2.myfantasyleague.com/mockdrafts/public.php">Join a Mock Draft</a></li>
+						<li><a href="http://www8.myfantasyleague.com/2012/ajax_ld?L=36828">Live Draft Room</a></li>
+						<li><a href="http://football26.myfantasyleague.com/2012/options?LEAGUE_ID=36828&O=129">My Draft List</a></li>
+						<li><a href="http://football26.myfantasyleague.com/2012/options?LEAGUE_ID=36828&O=151">My Draft Preferences</a></li>						
+						<li><a href="http://www2.myfantasyleague.com/mockdrafts/public.php">Join a Mock Draft</a></li>
 				    </ul>
 				</li> <!-- close draft -->
 				<li><a href="#">History</a>
 					<ul>
-						         <li><a href="#">Champions</a></li>
-						         <li><a href="#">Hall of Fame</a></li>
-						         <li><a href="#">Seasons</a>
-					<ul>
-						         <li><a href="http://football26.myfantasyleague.com/2011/home/54561">2011</a></li>
-					</ul>
-				</li> <!-- close Seasons -->						
+						<li><a href="#">Champions</a></li>
+						<li><a href="#">Hall of Fame</a></li>
+						<li><a href="#">Seasons</a>
+	  						<ul>
+	  							<li><a href="http://football99.myfantasyleague.com/2010/home/66584">2010</a></li> 
+					  			<li><a href="http://football26.myfantasyleague.com/2011/home/54561">2011</a></li>
+						  	</ul>
+	  					</li> <!-- close seasons -->						
 						<li><a href="#">Records</a>
-					<ul>
+							<ul>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=156">Franchise Records</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=157">Player Records</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=158">Matchup Records</a></li>
@@ -238,8 +239,8 @@
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=204">Season Records</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=208">Career Records</a></li>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=232">Record Streaks</a></li>
-					</ul>
-				</li> <!-- close Records -->
+							</ul>
+						</li> <!-- close Records -->
 					</ul>
 				</li>
 			</ul>
