--- a/css/gg_topmenu.html
+++ b/css/gg_topmenu.html
@@ -1,10 +1,18 @@
-<link href="http://www15.myfantasyleague.com/fflnetdynamic2012/44111_use_css.css" rel="stylesheet" type="text/css" /><script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script><script type="text/javascript" src="http://yourjavascript.com/4176228112/jqueryslidemenu.js"></script><script type='text/javascript'>
+<link href="http://www15.myfantasyleague.com/fflnetdynamic2012/44111_use_css.css" rel="stylesheet" type="text/css" />
+
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
+<script type="text/javascript" src="http://yourjavascript.com/4176228112/jqueryslidemenu.js"></script>
+
+<script type='text/javascript'>
     for(i = 0; i < document.getElementsByClassName('menu-item-object-page').length; i++){
     document.getElementsByClassName('menu-item-object-page')[i].firstChild.style.paddingRight = "0px";}
-</script><script type="text/JavaScript">
+</script>
+
+<script type="text/JavaScript">
 function timedRefresh(timeoutPeriod) {
 	setTimeout("location.reload(true);",timeoutPeriod); }
 </script><!-- START TOP NAVIGATION -->
+
 <div id="wrapper">
 <div class="jqueryslidemenu" id="myslidemenu">
 <ul>
