--- a/header/gg_header_online.html
+++ b/header/gg_header_online.html
@@ -28,7 +28,7 @@ function timedRefresh(timeoutPeriod) {
 							  	<li><a href="http://football8.myfantasyleague.com/2012/options?L=36828&O=01">League Franchises</a></li>
 						  	</ul>
 	  					</li> <!-- close franchise setup -->
-			  			<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=07">Roster</a></li>
+			  			<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=07">League Roster</a></li>
 	  					<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=138">Roster with Stats</a></li>
 						<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=118">Scoring History</a></li>
 						<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=171">Series Records</a></li>
@@ -224,6 +224,7 @@ function timedRefresh(timeoutPeriod) {
 						<li><a href="http://football26.myfantasyleague.com/2012/options?LEAGUE_ID=36828&O=129">My Draft List</a></li>
 						<li><a href="http://football26.myfantasyleague.com/2012/options?LEAGUE_ID=36828&O=151">My Draft Preferences</a></li>						
 						<li><a href="http://www2.myfantasyleague.com/mockdrafts/public.php">Join a Mock Draft</a></li>
+						<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=182&DISPLAY=LEAGUE">Draft Recap</a></li>
 				    </ul>
 				</li> <!-- close draft -->
 				<li><a href="#">History</a>
