--- a/header/gg_header_online.html
+++ b/header/gg_header_online.html
@@ -486,9 +486,14 @@ function timedRefresh(timeoutPeriod) {
 		<li><a href="#">Hall of Fame</a></li>
 		<li><a href="#">Seasons</a>
 		<ul>
-			<li><a href="http://football99.myfantasyleague.com/2010/home/66584">2010</a></li>
-			<li><a href="http://footbal15.myfantasyleague.com/2011/home/54561">2011</a></li>
-			<li><a href="http://football26.myfantasyleague.com/2012/home/36828">2012</a></li>
+			<li><a href="http://www3.myfantasyleague.com/2013/home/21445">2013</a>
+        		<li><a href="http://football26.myfantasyleague.com/2012/home/36828">2012</a>
+                	<li><a href="http://footbal15.myfantasyleague.com/2011/home/54561">2011</a>
+        		<li><a href="http://football99.myfantasyleague.com/2010/home/66584">2010</a>
+                	<li><a href="http://football99.myfantasyleague.com/2009/home/62523">2009</a>
+            		<li><a href="http://football99.myfantasyleague.com/2008/home/65180">2008</a>	
+                	<li><a href="http://football99.myfantasyleague.com/2007/home/54225">2007</a>
+		    	<li><a href="http://football99.myfantasyleague.com/2006/home/51349">2006</a>
 		</ul>
 		</li>
 		<!-- close seasons -->
