updates to the top menu

--- a/header/gg_header_online.html
+++ b/header/gg_header_online.html
@@ -103,7 +103,7 @@ function timedRefresh(timeoutPeriod) {
 				<li><a href="http://www26.myfantasyleague.com/2012/home/36828#">Owner's Box</a>
   					<ul>
   						<li><a href="#">Franchise Setup</a>
-	  						<ul> 
+	  						<ul>
 					  			<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=50">Owner Setup</a></li>
 							  	<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=70">Change Password</a></li>
 							  	<li><a href="http://football8.myfantasyleague.com/2012/options?L=36828&O=01">League Franchises</a></li>
@@ -175,12 +175,12 @@ function timedRefresh(timeoutPeriod) {
 									<ul>
 										<li><a rel="external" target="_new" href="http://fantasynews.cbssports.com/fantasyfootball/playernews">Player News</a></li>
 										<li><a rel="external" target="_new" href="http://www.cbssports.com/nfl/injuries">Player Injuries</a></li>
-									</ul> 
+									</ul>
 								</li> <!-- close cbs sports -->
 								<li><a href="http://www.usatoday.com/sports/football/index">USA Today</a>
 								<li><a href="http://msn.foxsports.com/nfl">FOX Sports</a>
 								<li><a href="http://sportsillustrated.cnn.com/football/nfl/">SI Sports</a>
-								<li><a href="http://www.cbssports.com/nfl/">CBS Sports</a>									
+								<li><a href="http://www.cbssports.com/nfl/">CBS Sports</a>
 							</ul>
 						</li> <!-- close nfl news -->
 					</ul>
@@ -192,7 +192,7 @@ function timedRefresh(timeoutPeriod) {
 								<li><a href="http://www26.myfantasyleague.com/2012/live_scoring_summary?L=36828">Scoring Summary</a></li>
 								<li><a href="http://www26.myfantasyleague.com/2012/live_scoring?L=36828">Scoring Details</a></li>
 								<li><a href="http://football8.myfantasyleague.com/2012/fantasy_box_score?L=36828">Box Score</a></li>
-								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=118">Scoring History</a></li>								
+								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=118">Scoring History</a></li>
 							</ul>
 						</li> <!-- close live scoring -->
 						<li><a href="#">Research</a>
@@ -301,9 +301,10 @@ function timedRefresh(timeoutPeriod) {
 				<li><a href="#">Playoffs</a></li>
 				<li><a href="#">Draft</a>
 					<ul>
-						<li><a href="http://www8.myfantasyleague.com/2012/ajax_ld?L=36828">Live Draft Room</a></li>
+            <li><a href="http://goallinegridiron.com/2014/login.php">OFFLINE Draft Room</a></li>
+						<li><a href="http://www8.myfantasyleague.com/2012/ajax_ld?L=36828">LIVE Draft Room</a></li>
 						<li><a href="http://football26.myfantasyleague.com/2012/options?LEAGUE_ID=36828&O=129">My Draft List</a></li>
-						<li><a href="http://football26.myfantasyleague.com/2012/options?LEAGUE_ID=36828&O=151">My Draft Preferences</a></li>						
+						<li><a href="http://football26.myfantasyleague.com/2012/options?LEAGUE_ID=36828&O=151">My Draft Preferences</a></li>
 						<li><a href="http://www2.myfantasyleague.com/mockdrafts/public.php">Join a Mock Draft</a></li>
 						<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=182&DISPLAY=LEAGUE">Draft Recap</a></li>
 				    </ul>
@@ -322,8 +323,8 @@ function timedRefresh(timeoutPeriod) {
 		                              	<li><a href="http://footbal15.myfantasyleague.com/2011/home/54561">2011</a></li>
 		                              	<li><a href="http://football26.myfantasyleague.com/2012/home/36828">2012</a></li>
 		                        	<li><a href="http://www3.myfantasyleague.com/2013/home/21445">2013</a></li>
-		                                      </ul> 
-	  					</li> <!-- close seasons -->						
+		                                      </ul>
+	  					</li> <!-- close seasons -->
 						<li><a href="#">Records</a>
 							<ul>
 								<li><a href="http://football26.myfantasyleague.com/2012/options?L=36828&O=156">Franchise Records</a></li>
@@ -491,7 +492,7 @@ function timedRefresh(timeoutPeriod) {
                 	<li><a href="http://footbal15.myfantasyleague.com/2011/home/54561">2011</a>
         		<li><a href="http://football99.myfantasyleague.com/2010/home/66584">2010</a>
                 	<li><a href="http://football99.myfantasyleague.com/2009/home/62523">2009</a>
-            		<li><a href="http://football99.myfantasyleague.com/2008/home/65180">2008</a>	
+            		<li><a href="http://football99.myfantasyleague.com/2008/home/65180">2008</a>
                 	<li><a href="http://football99.myfantasyleague.com/2007/home/54225">2007</a>
 		    	<li><a href="http://football99.myfantasyleague.com/2006/home/51349">2006</a>
 		</ul>
